# kmm

./: .gitignore  README.md
embedded/: .avrduderc  README.md  avrdeploy.bash  avrdude.conf
embedded/motor/: .dir-locals.el  main.c  main.h  makefile  packet.c  packet.h  send_packet.py  serial.c  serial.h  spi.c  spi.h  stepper.c  timer.c  timer.h
embedded/sensor/: I2C.c  I2C.h  i2c_master.c  i2c_master.h  main.c  makefile  receive_packet.py  spi.c  spi.h
embedded/sensor/sensor_tst/: i2c_master.c  i2c_master.h  main.c  main.h  makefile  sensor_tst  spi.c
misc/: launcher.sh  lcd.py
misc/led/: main.cpp  makefile
ros/kmm_bringup/: CMakeLists.txt  package.xml
ros/kmm_bringup/launch/: both.launch  bringup.launch  client.launch  devel.launch  robot.launch
ros/kmm_bringup/rviz/: config.rviz  smooth.rviz
ros/kmm_bringup/scripts/: http-server.sh  httpserver.sh
ros/kmm_control/: CMakeLists.txt  package.xml
ros/kmm_drivers/: CMakeLists.txt  package.xml
ros/kmm_drivers/include/kmm_drivers/: LidarDriver.hpp  MotorDriver.hpp
ros/kmm_drivers/msg/: WheelVelocities.msg
ros/kmm_drivers/nodes/: kmm_input_node.py  kmm_led_node.py  kmm_motor_node.cpp  kmm_sensor_input_node.py  kmm_steering_node.py
ros/kmm_drivers/src/: MotorDriver.cpp
ros/kmm_exploration/: CMakeLists.txt  package.xml
ros/kmm_exploration/include/kmm_exploration/: Exploration.hpp  Target.hpp
ros/kmm_exploration/nodes/: kmm_exploration_node.cpp  kmm_target_node.cpp
ros/kmm_exploration/src/: Exploration.cpp  Target.cpp
ros/kmm_gamepad/: CMakeLists.txt  package.xml
ros/kmm_gamepad/cfg/: Gamepad.cfg
ros/kmm_gamepad/nodes/: kmm_gamepad_node.cpp  kmm_gamepad_to_vel_node.cpp
ros/kmm_gamepad/src/: kmm_gamepad_node.cpp
ros/kmm_gui/: CMakeLists.txt  package.xml
ros/kmm_mapping/: CMakeLists.txt  package.xml
ros/kmm_mapping/action/: RemoveWalls.action
ros/kmm_mapping/cfg/: Mapping.cfg
ros/kmm_mapping/include/kmm_mapping/: Map.hpp  Mapping.hpp  Occupancy.hpp
ros/kmm_mapping/msg/: RemoveWallsAction.msg  RemoveWallsActionFeedback.msg  RemoveWallsActionGoal.msg  RemoveWallsActionResult.msg  RemoveWallsGoal.msg  wall_positions.msg
ros/kmm_mapping/nodes/: kmm_mapping_node.cpp  occupancy_node.cpp  wall_positions_node.cpp
ros/kmm_mapping/src/: Map.cpp  Mapping.cpp  Occupancy.cpp
ros/kmm_navigation/: CMakeLists.txt  package.xml
ros/kmm_navigation/action/: MoveTo.action
ros/kmm_navigation/cfg/: Navigation.cfg
ros/kmm_navigation/include/kmm_navigation/: Map.hpp  Navigation.hpp  PathFinder.hpp  PathFollower.hpp  Smooth.hpp
ros/kmm_navigation/msg/: MoveToAction.msg  MoveToActionFeedback.msg  MoveToActionGoal.msg  MoveToActionResult.msg  MoveToGoal.msg
ros/kmm_navigation/nodes/: kmm_navigation_node.cpp  kmm_smooth_node.cpp
ros/kmm_navigation/src/: Map.cpp  Navigation.cpp  PathFinder.cpp  PathFollower.cpp  Smooth.cpp
ros/kmm_position/: CMakeLists.txt  package.xml
ros/kmm_position/cfg/: Position.cfg
ros/kmm_position/include/kmm_position/: Kalman.h  Pose.h  Position.hpp  ils.h
ros/kmm_position/nodes/: kmm_position_node.cpp  test_ils_node.cpp  test_kalman_node.cpp
ros/kmm_position/src/: Kalman.cpp  Pose.cpp  Position.cpp  ils.cpp
tools/gamepad/: CMakeLists.txt  main.cpp
web/: gamepad.js  index.html  roslib.js  style.css  web.css  web.js
web/js/: controller.js  gamepad.js  model.js  view.js
web/lib/: fireworks.js  matrix.js
xc/: Dockerfile  README.md  entrypoint.sh  xc.bash  xc.py
