<?xml version="1.0"?>
<package>
  <name>kmm_bringup</name>
  <version>0.0.0</version>
  <description>The kmm_bringup package</description>

  <maintainer email="erik@todo.todo">erik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
